chore: homepage rework
program TBD by Edu

--- a/nsw/index.html
+++ b/nsw/index.html
@@ -126,7 +126,7 @@
         <div class="row">
             <div class="col-lg-6 wow slideInLeft order-2 order-md-12" data-wow-delay=".7s" style="visibility: visible; animation-delay: 0.7s; animation-name: slideInLeft;">
                 <div class="banner-image">
-                     <img src="./images/banner_img.png" alt="banner-img">
+                     <img src="./images/Juliani.png" alt="banner-img">
                 </div>
             </div>
             <div class="col-lg-6 d-flex justify-content-center align-items-center wow slideInRight  order-1 order-md-12" data-wow-delay=".7s" style="visibility: visible; animation-delay: 0.7s; animation-name: slideInRight;">
@@ -141,6 +141,11 @@
                         NSW provides an easy, fun and informative environment for start-ups and the ecosystem to curate an experience for their current and potential customers.
                     </h5>
                     <p style="color:white;">It will be a space to learn from peers and let your hair down as we celebrate and contribute to the vibrant start-up culture in Kenya.</p>
+                    <p style="color:white;">Are you a startup? Be one of the 200 startups shaping the narrative. For general audience, see the program and sign up <strong>for free</strong>, for activities of your choice.</p>
+                    <div class="lead">
+                        <a style="border: solid 3px #280a58; font-weight: bold; color: white;" target="_blank" href="https://bit.ly/nsw-startup-form" class="btn btn-large">Sign Up Now</a>
+                        <a style="border: solid 3px #280a58; font-weight: bold; color: white;" href="./prog.html" class="btn btn-large">View Program</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -148,11 +153,60 @@
 </section>
 <!--Banner End-->
 
+<section class="company-stats-section counter-bg" id="counter">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-12">
+                <div class="row">
+                    <!-- First Counter -->
+                    <div class="col-12 col-md-3">
+                        <div class="stats-block-inner text-center">
+                            <i class="lni lni-bar-chart text-blue"></i>
+                            <div class="stats-number-inner">
+                                <span>200</span>+
+                            </div>
+                            <p class="paragraph">Startups</p>
+                        </div>
+                    </div>
+                    <!-- Second Counter -->
+                    <div class="col-12 col-md-3">
+                        <div class="stats-block-inner text-center">
+                            <i class="lni lni-heart text-purple"></i>
+                            <div class="stats-number-inner">
+                                <span>50</span>+
+                            </div>
+                            <p class="paragraph">Conversations</p>
+                        </div>
+                    </div>
+                    <!-- Third Counter -->
+                    <div class="col-12 col-md-3">
+                        <div class="stats-block-inner text-center">
+                            <i class="lni lni-protection text-pink"></i>
+                            <div class="stats-number-inner">
+                                <span>5</span>+
+                            </div>
+                            <p class="paragraph">Concerts</p>
+                        </div>
+                    </div>
+                    <!-- Fourth Counter -->
+                    <div class="col-12 col-md-3">
+                        <div class="stats-block-inner text-center">
+                            <i class="lni lni-blackboard text-blue"></i>
+                            <div class="stats-number-inner">
+                                <span>5</span>
+                            </div>
+                            <p class="paragraph">Side Events</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- MAIN PAGE Start -->
 <section class="main standalone" id="main">
     <!--content-->
-    <div class="blog-content">
-        <div class="container">
             <div class="row no-gutters">
                 <div class="col-12">
 
