chore: added program

--- a/nsw/index.html
+++ b/nsw/index.html
@@ -54,7 +54,7 @@
             <div class="round-nav ">
                 <a href="#home" title="Logo" class="logo ">
                     <!--Logo Default-->
-                    <!-- <img src="images/logo.png" alt="logo" class=" nav-logo"> -->
+                    <img src="images/juliani_logo.png" alt="logo" class=" nav-logo">
                 </a>
 
                 <!--Nav Links-->
