update: homepage with value prop

--- a/nsw/index.html
+++ b/nsw/index.html
@@ -64,6 +64,7 @@
                         <a class="nav-link  line" href="#about">About</a>
                         <a class="nav-link  line" href="#partners">Partners</a>
                         <a class="nav-link  line" href="#packages">Packages</a>
+                        <a class="nav-link  line" href="./prog.html">Program</a>
                         <a target="_blank" href="https://bit.ly/NSW-startup-form" class=" nav-btn nav-link " data-animation-duration="500">Sign Up Now</a>
                     </div>
                 </div>
@@ -106,6 +107,9 @@
                         <a class="nav-link " href="#packages">Packages</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="./prog.html">Program</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://bit.ly/NSW-startup-form">Sign Up</a>
                     </li>
                 </ul>
@@ -121,7 +125,7 @@
 <!-- End Header -->
 
 <!--Banner Start-->
-<section style="min-height: 900px;" class="banenr bg-banner py-0" id="home">
+<section style="min-height: 900px;" class="banner bg-banner" id="home">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 wow slideInLeft order-2 order-md-12" data-wow-delay=".7s" style="visibility: visible; animation-delay: 0.7s; animation-name: slideInLeft;">
@@ -131,8 +135,8 @@
             </div>
             <div class="col-lg-6 d-flex justify-content-center align-items-center wow slideInRight  order-1 order-md-12" data-wow-delay=".7s" style="visibility: visible; animation-delay: 0.7s; animation-name: slideInRight;">
                 <div class="banner-area">
-                    <h4 class="banner-text">
-                        Juliani Presents
+                    <h4 style="color: white; padding-top: 30px;">
+                        Juliani Presents &#8212;
                     </h4>
                     <h2 class="banner-heading">
                         Nairobi Startup Week
@@ -140,10 +144,17 @@
                     <h5 class="banner-des">
                         NSW provides an easy, fun and informative environment for start-ups and the ecosystem to curate an experience for their current and potential customers.
                     </h5>
-                    <p style="color:white;">It will be a space to learn from peers and let your hair down as we celebrate and contribute to the vibrant start-up culture in Kenya.</p>
-                    <p style="color:white;">Are you a startup? Be one of the 200 startups shaping the narrative. For general audience, see the program and sign up <strong>for free</strong>, for activities of your choice.</p>
+                    <p class="banner-des" style="color:white;"><strong>What you get as a startup:</strong></p>
+                    <ul class="banner-des" style="color: white;">
+                        <li>Consultancy from a partner to Startups on Customer Engagement tools i.e SMS, USSD, WhatsApp, Voice Call Center, etc.</li>
+                        <li>Opportunity to tap into the USD. 500,000 tech credit extension from a partner.</li>
+                        <li>Involvement in Partner bootcamps and events.</li>
+                        <li>Networking with stakeholders, partners and other startups.</li>
+                        <li>Build up on customer base and clientele, from the NSW audience.</li>
+                    </ul>
+                    <p class="banner-des" style="color:white;">Are you a startup? Be one of the 200 startups shaping the narrative.</p>
                     <div class="lead">
-                        <a style="border: solid 3px #280a58; font-weight: bold; color: white;" target="_blank" href="https://bit.ly/nsw-startup-form" class="btn btn-large">Sign Up Now</a>
+                        <a style="border: solid 3px #280a58; font-weight: bold; color: white;" target="_blank" href="https://bit.ly/nsw-startup-form" class="btn btn-large">Startup Sign Up</a>
                         <a style="border: solid 3px #280a58; font-weight: bold; color: white;" href="./prog.html" class="btn btn-large">View Program</a>
                     </div>
                 </div>
