chore: update program and partners

--- a/nsw/index.html
+++ b/nsw/index.html
@@ -61,8 +61,8 @@
                 <div class="collapse navbar-collapse" id="megaone">
                     <div class="navbar-nav ml-auto ">
                         <a class="nav-link  line " href="#home">Home</a>
-                        <a class="nav-link  line" href="#about">About</a>
                         <a class="nav-link  line" href="#partners">Partners</a>
+                        <a class="nav-link  line" href="#about">About</a>
                         <a class="nav-link  line" href="#packages">Packages</a>
                         <a class="nav-link  line" href="./prog.html">Program</a>
                         <a target="_blank" href="https://bit.ly/NSW-startup-form" class=" nav-btn nav-link " data-animation-duration="500">Sign Up Now</a>
@@ -98,10 +98,10 @@
                         <a class="nav-link " href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#about">About</a>
+                        <a class="nav-link " href="#partners">Partners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#partners">Partners</a>
+                        <a class="nav-link " href="#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#packages">Packages</a>
@@ -135,7 +135,7 @@
             </div>
             <div class="col-lg-6 d-flex justify-content-center align-items-center wow slideInRight  order-1 order-md-12" data-wow-delay=".7s" style="visibility: visible; animation-delay: 0.7s; animation-name: slideInRight;">
                 <div class="banner-area">
-                    <h4 style="color: white; padding-top: 30px;">
+                    <h4 style="color: white; padding-top: 60px;">
                         Juliani Presents &#8212;
                     </h4>
                     <h2 class="banner-heading">
@@ -144,7 +144,7 @@
                     <h5 class="banner-des">
                         NSW provides an easy, fun and informative environment for start-ups and the ecosystem to curate an experience for their current and potential customers.
                     </h5>
-                    <p class="banner-des" style="color:white;"><strong>What you get as a startup:</strong></p>
+                    <p class="banner-des" style="color:white;"><strong>Opportunities available for startups:</strong></p>
                     <ul class="banner-des" style="color: white;">
                         <li>Consultancy from a partner to Startups on Customer Engagement tools i.e SMS, USSD, WhatsApp, Voice Call Center, etc.</li>
                         <li>Opportunity to tap into the USD. 500,000 tech credit extension from a partner.</li>
@@ -221,8 +221,39 @@
             <div class="row no-gutters">
                 <div class="col-12">
 
-                    <div class="standalone-detail" id="about" style="padding-top:80px;">
+                    <div class="standalone-detail" id="about">
                         <div class="row no-gutters">
+                            <div class="standalone-detail" id="partners">
+                                <div class="row no-gutters">
+                                    <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
+                                        <p class="sub-heading text-center text-blue">#NSW2022</p>
+                                        <h1 class="heading text-orang">Partners</h1>
+                                        <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / NTF Club / Promote Kenya / Motisure / KenyanWall Street / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
+                                    </div>
+                                    <div class="row partners-logos">
+                                        <div class="column" style="text-align: center;">
+                                            <img src="./images/logos/adanianlabs.png">
+                                            <img src="./images/logos/beyonde_labs_inv.png">
+                                            <img src="./images/logos/doctorslive.jpeg">
+                                            <img src="./images/logos/africastalking.png">
+                                            <img src="./images/logos/kenyan_wallstreet.jpeg">
+                                            <img src="./images/logos/kepsa.png">
+                                            <img src="./images/logos/kidato.png">
+                                            <img src="./images/logos/motisure.jpeg">
+                                            <img src="./images/logos/nailab.svg">
+                                            <img src="./images/logos/promote_kenya.png">
+                                            <img src="./images/logos/qhala.png">
+                                            <img src="./images/logos/sautigang.png" />
+                                            <img src="./images/logos/sendy_inv.png">
+                                            <img src="./images/logos/sustainable.png">
+                                            <img src="./images/logos/startinev.jpeg" />
+                                            <img src="./images/logos/wanderlust-diaries-logo.png">
+                                            <img src="./images/juliani_logo.png">
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+
                             <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
                                 <p class="sub-heading text-center text-blue">A startups festival</p>
                                 <h1 class="heading text-orang">About <strong>NSW</strong></h1>
@@ -259,19 +290,6 @@
                         </div>
                     </div>
 
-                    <div class="standalone-detail" id="partners" style="padding-top:80px;">
-                        <div class="row no-gutters">
-                            <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
-                                <p class="sub-heading text-center text-blue">#NSW2022</p>
-                                <h1 class="heading text-orang">Partners</h1>
-                                <p class="para_text m-auto ">Nairobi Startup Week (NSW) provides an easy, fun and informative environment for start-ups and the ecosystem to curate an experience for their current and potential customers.</p>
-                                <p class="para_text m-auto"><strong>Sendy</strong> - Sendy is supporting 20 of their suppliers to set up at the exhibition.</p>
-                                <p class="para_text m-auto"><strong>KEPSA</strong>- Through its knowledge center, Sustainable Inclusive Business, KEPSA is hosting a breakfast meeting for 50 start-ups as the inaugural event for NSW.</p>
-                                <p class="para_text m-auto"><strong>ASSEK</strong> - ASSEK is bringing together its network of 56 Start-up enablers, curating a conversation at the showcase and presentation space.</p>
-                            </div>
-                        </div>
-                    </div>
-
                     <!-- <div class="row standalone-row align-items-center no-gutters">
                         <div class="col-lg-6">
                             <div class="blog-image wow hover-effect fadeInLeft image">
@@ -287,7 +305,7 @@
                         </div>
                     </div> -->
 
-                    <div class="standalone-detail" id="packages" style="padding-top:80px;">
+                    <div class="standalone-detail" id="packages" style="padding-top:30px;">
                         <div class="row no-gutters">
                             <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
                                 <p class="sub-heading text-center text-blue">#NSW2022</p>
@@ -333,7 +351,18 @@
                                 <p>For more information, feel free to get in touch: <strong>info@nsw.ke</strong></p>.
 
                                 <div class="lead">
-                                    <a style="border: solid 2px #ff7c00; font-weight: bold;" target="_blank" href="https://bit.ly/nsw-startup-form" class="btn btn-large">Sign Up Now</a>
+                                    <a style="border: solid 2px #ff7c00; font-weight: bold;" target="_blank" href="https://bit.ly/nsw-startup-form" class="btn btn-large">Sign Up as Startup</a>
+                                    <a style="border: solid 2px #ff7c00; font-weight: bold;" href="./prog.html" class="btn btn-large">See Program</a>
+                                </div>
+
+                                <h3 style="margin-top: 30px;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#ff7c00" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                                  </svg> Downloads</h3>
+                                <div class="downloads">
+                                    <a href="./images/nsw-concept-note.pdf" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-pdf-fill" viewBox="0 0 16 16">
+  <path d="M5.523 12.424c.14-.082.293-.162.459-.238a7.878 7.878 0 0 1-.45.606c-.28.337-.498.516-.635.572a.266.266 0 0 1-.035.012.282.282 0 0 1-.026-.044c-.056-.11-.054-.216.04-.36.106-.165.319-.354.647-.548zm2.455-1.647c-.119.025-.237.05-.356.078a21.148 21.148 0 0 0 .5-1.05 12.045 12.045 0 0 0 .51.858c-.217.032-.436.07-.654.114zm2.525.939a3.881 3.881 0 0 1-.435-.41c.228.005.434.022.612.054.317.057.466.147.518.209a.095.095 0 0 1 .026.064.436.436 0 0 1-.06.2.307.307 0 0 1-.094.124.107.107 0 0 1-.069.015c-.09-.003-.258-.066-.498-.256zM8.278 6.97c-.04.244-.108.524-.2.829a4.86 4.86 0 0 1-.089-.346c-.076-.353-.087-.63-.046-.822.038-.177.11-.248.196-.283a.517.517 0 0 1 .145-.04c.013.03.028.092.032.198.005.122-.007.277-.038.465z"/>
+  <path fill-rule="evenodd" d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm5.5 1.5v2a1 1 0 0 0 1 1h2l-3-3zM4.165 13.668c.09.18.23.343.438.419.207.075.412.04.58-.03.318-.13.635-.436.926-.786.333-.401.683-.927 1.021-1.51a11.651 11.651 0 0 1 1.997-.406c.3.383.61.713.91.95.28.22.603.403.934.417a.856.856 0 0 0 .51-.138c.155-.101.27-.247.354-.416.09-.181.145-.37.138-.563a.844.844 0 0 0-.2-.518c-.226-.27-.596-.4-.96-.465a5.76 5.76 0 0 0-1.335-.05 10.954 10.954 0 0 1-.98-1.686c.25-.66.437-1.284.52-1.794.036-.218.055-.426.048-.614a1.238 1.238 0 0 0-.127-.538.7.7 0 0 0-.477-.365c-.202-.043-.41 0-.601.077-.377.15-.576.47-.651.823-.073.34-.04.736.046 1.136.088.406.238.848.43 1.295a19.697 19.697 0 0 1-1.062 2.227 7.662 7.662 0 0 0-1.482.645c-.37.22-.699.48-.897.787-.21.326-.275.714-.08 1.103z"/>
+</svg> NSW Concept Note (pdf)</a>
                                 </div>
                             </div>
                         </div>
