--- a/nsw/prog.html
+++ b/nsw/prog.html
@@ -72,7 +72,9 @@
         <div class="social-icons">
             <ul>
                 <li><a class="email-hover" href="mailto:info@nsw.ke" target="_blank"><i class="fas fa-at"></i></a></li>
-                <li><a class="instagram-hover" href="https://instagram.com/nsw_ke" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a class="instagram-hover" href="https://instagram.com/nsw_ke" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
+</svg></a></li>
                 <li><a class="twitter-hover" href="https://twitter.com/nsw_ke" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <!-- <li><a class="instagram-hover" href="javascript:void(0);" target="_blank"><i class="fab fab fa-linkedin-in"></i></a></li> -->
             </ul>
@@ -138,7 +140,9 @@
         </h4>
         <ul class="list-timeline list-timeline-primary">
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fab fa-instagram"></i></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
+</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - Our Future, Our past.</p>
@@ -157,14 +161,21 @@
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-village">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fa-album"></i> <strong>THE VILLAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-boombox-fill" viewBox="0 0 16 16">
+  <path d="M14.5.5a.5.5 0 0 0-1 0V2H1a1 1 0 0 0-1 1v2h16V3a1 1 0 0 0-1-1h-.5V.5ZM2.5 4a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm7.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm1.5.5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-7-1h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1Zm-2 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm.5-1.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm6.5 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0-1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1Z"/>
+  <path d="M16 6H0v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V6ZM4.5 13a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm7 0a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/>
+</svg> <strong>THE VILLAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-village"> Let your hair down, connect with others at our village launge.</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 7:00 PM</span> - Boombap: East African & Kenyan Hiphop DJ set</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
-            <p class="my-0 text-dark flex-fw text-sm txt"><strong>THE MAIN STAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
+              <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
+              <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+            </svg>
+            <strong>THE MAIN STAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-mainstage">The Juliani Experiment Show (JX_)</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
@@ -181,7 +192,9 @@
         </h4>
         <ul class="list-timeline list-timeline-primary">
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fab fa-instagram"></i></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
+</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - TBD</p>
@@ -200,14 +213,20 @@
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-village">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fa-album"></i> <strong>THE VILLAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-boombox-fill" viewBox="0 0 16 16">
+  <path d="M14.5.5a.5.5 0 0 0-1 0V2H1a1 1 0 0 0-1 1v2h16V3a1 1 0 0 0-1-1h-.5V.5ZM2.5 4a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm7.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm1.5.5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-7-1h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1Zm-2 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm.5-1.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm6.5 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0-1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1Z"/>
+  <path d="M16 6H0v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V6ZM4.5 13a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm7 0a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/>
+</svg> <strong>THE VILLAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-village"> Let your hair down, connect with others at our village launge.</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 7:00 PM</span> - TBD</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
-            <p class="my-0 text-dark flex-fw text-sm txt"><strong>THE MAIN STAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
+              <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
+              <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+            </svg> <strong>THE MAIN STAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-mainstage">The Juliani Experiment Show (JX_)</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
@@ -224,7 +243,9 @@
         </h4>
         <ul class="list-timeline list-timeline-primary">
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fab fa-instagram"></i></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
+</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - Short-term Accommodation</p>
@@ -243,14 +264,20 @@
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-village">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fa-album"></i> <strong>THE VILLAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-boombox-fill" viewBox="0 0 16 16">
+  <path d="M14.5.5a.5.5 0 0 0-1 0V2H1a1 1 0 0 0-1 1v2h16V3a1 1 0 0 0-1-1h-.5V.5ZM2.5 4a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm7.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm1.5.5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-7-1h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1Zm-2 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm.5-1.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm6.5 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0-1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1Z"/>
+  <path d="M16 6H0v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V6ZM4.5 13a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm7 0a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/>
+</svg> <strong>THE VILLAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-village"> Let your hair down, connect with others at our village launge.</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 7:00 PM</span> - Boombap: East African & Kenyan Hiphop DJ set</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
-            <p class="my-0 text-dark flex-fw text-sm txt"><strong>THE MAIN STAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
+              <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
+              <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+            </svg> <strong>THE MAIN STAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-mainstage">The Juliani Experiment Show (JX_)</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
@@ -268,7 +295,9 @@
         </h4>
         <ul class="list-timeline list-timeline-primary">
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fab fa-instagram"></i></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
+</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - TBD</p>
@@ -281,20 +310,26 @@
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Sauti Gang: session with musicians and instrumentalists</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Sauti Gang: Mzkey App &mdash; a session with musicians and instrumentalists</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-village">
-            <p class="my-0 text-dark flex-fw text-sm txt"><i class="fa-album"></i> <strong>THE VILLAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-boombox-fill" viewBox="0 0 16 16">
+  <path d="M14.5.5a.5.5 0 0 0-1 0V2H1a1 1 0 0 0-1 1v2h16V3a1 1 0 0 0-1-1h-.5V.5ZM2.5 4a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm7.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm1.5.5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-7-1h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1Zm-2 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm.5-1.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm6.5 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0-1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1Z"/>
+  <path d="M16 6H0v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V6ZM4.5 13a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm7 0a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/>
+</svg> <strong>THE VILLAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-village"> Let your hair down, connect with others at our village launge.</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 7:00 PM</span> - TBD</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
-            <p class="my-0 text-dark flex-fw text-sm txt"><strong>THE MAIN STAGE</strong></p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
+              <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
+              <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+            </svg> <strong>THE MAIN STAGE</strong></p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-mainstage">The Juliani Experiment Show (JX_)</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
@@ -345,6 +380,37 @@
         </p>
       </div>
     </div>
+
+    <div class="standalone-detail" id="partners">
+      <div class="row no-gutters">
+          <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
+              <p class="sub-heading text-center text-blue">#NSW2022</p>
+              <h1 class="heading text-orang">Partners</h1>
+              <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / NTF Club / Promote Kenya / Motisure / Kenyan Wall Street / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
+          </div>
+          <div class="row partners-logos">
+              <div class="column" style="text-align: center;">
+                <img src="./images/logos/adanianlabs.png">
+                <img src="./images/logos/beyonde_labs_inv.png">
+                <img src="./images/logos/doctorslive.jpeg">
+                <img src="./images/logos/africastalking.png">
+                <img src="./images/logos/kenyan_wallstreet.jpeg">
+                <img src="./images/logos/kepsa.png">
+                <img src="./images/logos/kidato.png">
+                <img src="./images/logos/motisure.jpeg">
+                <img src="./images/logos/nailab.svg">
+                <img src="./images/logos/promote_kenya.png">
+                <img src="./images/logos/qhala.png">
+                <img src="./images/logos/sautigang.png" />
+                <img src="./images/logos/sendy_inv.png">
+                <img src="./images/logos/sustainable.png">
+                <img src="./images/logos/startinev.jpeg" />
+                <img src="./images/logos/wanderlust-diaries-logo.png">
+                <img src="./images/juliani_logo.png">
+              </div>
+            </div>
+      </div>
+  </div>
   </div>
 </section>
 
